<resources>
    <string name="app_name">Вчимо ПДР разом!</string>
    <string name="Hello">Привіт, Вчимо ПДР разом!</string>
    <string name="Start">До тестів</string>
    <string name="btnInfo">ПДР інформація</string>
    <string name="backtoMenu">Меню</string>
    <string name="level1">Легкі</string>
    <string name="level2">Середні</string>
    <string name="level3">Складні</string>
    <string name="level4">Змішані</string>
    <string name="pdrInfo">Правила дорожнього руху 2021</string>
    <string name="info1">Більше</string>
    <string name="level">Рівень :</string>
    <string name="level01">Рівень 1</string>
    <string name="level02">Рівень 2</string>
    <string name="level03">Рівень 3</string>
    <string name="level04">Рівень 4</string>
    <string name="cont">Почати</string>
    <string name="cont1">Далі</string>
</resources>