<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/levels_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/dor1" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"

            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="40dp"


                    >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="180dp"
                        android:layout_height="80dp"
                        android:text="@string/level1"
                        android:background="@drawable/btn_levels_press"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="180dp"
                        android:layout_height="80dp"
                        android:text="@string/level2"
                        android:background="@drawable/btn_levels_press"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="180dp"
                        android:layout_height="80dp"
                        android:text="@string/level3"
                        android:background="@drawable/btn_levels_press"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="180dp"
                        android:layout_height="80dp"
                        android:text="@string/level4"
                        android:background="@drawable/btn_levels_press"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backtoMenu"
                    android:background="@drawable/btn_stroke_press"
                    android:textSize="24sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>